# WinProcessReporter

./: .gitignore  LICENSE  README.md  pyproject.toml
winprocessreporter/: __init__.py  build.py  main.py  media.py  process.py  reporter.py  upload.py
